force-app/main/default/objects/Computer__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>IT_Asset__c</referenceTo>
    <relationshipLabel>Computers</relationshipLabel>
    <relationshipName>Computers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>