force-app/main/default/objects/Computer__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Computer Model Number</description>
    <label>Model</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>