force-app/main/default/objects/Computer__c/fields/RAM__c.field-meta.xml
<CustomField>
    <fullName>RAM__c</fullName>
    <description>RAM in GB</description>
    <label>RAM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>