force-app/main/default/objects/Computer__c/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <label>Storage</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>