force-app/main/default/objects/Computer__c/fields/Touch__c.field-meta.xml
<CustomField>
    <fullName>Touch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Touch</label>
    <type>Checkbox</type>
</CustomField>